--- a/i3/config
+++ b/i3/config
@@ -60,8 +60,15 @@ bindsym $mod+Return exec kitty
 # kill focused window
 bindsym $mod+Shift+q kill
 
+set $ROFITYPE type-6
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id rofi -combi-modi window#drun -font "Nerd Font Mono 12" -show combi -theme "Indego" -show-icons # dmenu_run
+# bindsym $mod+d exec --no-startup-id rofi -combi-modi window#drun -font "Nerd Font Mono 12" -show combi -theme "Indego" -show-icons # dmenu_run
+bindsym $mod+d exec --no-startup-id $HOME/.config/rofi/launchers/$ROFITYPE/launcher.sh
+
+# Bind to rofy-power-menu
+# bindsym $mod+Shift+e exec rofi -show power-menu -modi power-menu:rofi-power-menu -theme "Indego" -font "Nerd Font Mono 14" -width 14 -lines 6 -location 0
+bindsym $mod+Shift+e exec --no-startup-id $HOME/.config/rofi/powermenu/$ROFITYPE/powermenu.sh
+
 
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
@@ -162,8 +169,6 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 # bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-# Bind to rofy-power-menu
-bindsym $mod+Shift+e exec rofi -show power-menu -modi power-menu:rofi-power-menu -theme "Indego" -font "Nerd Font Mono 14" -width 14 -lines 6 -location 0
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -192,7 +197,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-exec --no-startup-id feh --bg-fill ~/Pictures/TokyoBeauty.jpg
+exec --no-startup-id feh --bg-fill ~/Pictures/Minmalistic.jpg
 exec --no-startup-id picom --config $HOME/.config/picom/picom.conf -b
 
 # I3-GAPS CONFIG
@@ -223,11 +228,5 @@ client.background       #ffffff
 default_border pixel 2
 default_floating_border pixel 2
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-	position top
-	font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-    	font pango:agave Nerd Font Mono 16
-}
+# EXEC POLYBAR
+exec --no-startup-id polybar 
