--- a/i3/config
+++ b/i3/config
@@ -46,6 +46,11 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play
+bindsym XF86AudioPause exec playerctl pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
 
 # brightnessctl to control brigthness.
  bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl --min-val=2 -q set 2%-
@@ -77,10 +82,10 @@ bindsym $mod+Shift+e exec --no-startup-id $HOME/.config/rofi/powermenu/$ROFITYPE
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -101,7 +106,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+b split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -197,7 +202,7 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-exec --no-startup-id feh --bg-fill ~/Pictures/Minmalistic.jpg
+exec --no-startup-id feh --bg-fill ~/Pictures/anime-girl-purple.jpg
 exec --no-startup-id picom --config $HOME/.config/picom/picom.conf -b
 
 # I3-GAPS CONFIG
@@ -236,4 +241,5 @@ bindsym $mod+Shift+minus move scratchpad
 bindsym $mod+minus scratchpad show
 
 
-
+exec --no-startup-id "setxkbmap -layout us,es"
+exec --no-startup-id "setxkbmap -option 'grp:alt_shift_toggle'"
