--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,7 +1,7 @@
 #################################
 #             Shadows           #
 #################################
-
+log-level = "debug";
 
 # Enabled client-side shadows on windows. Note desktop windows
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow,
@@ -102,8 +102,8 @@ fade-out-step = 0.03;
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-# inactive-opacity = 1
-inactive-opacity = 0.85;
+inactive-opacity = 1
+# inactive-opacity = 0.85;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
@@ -123,7 +123,9 @@ inactive-dim = 0.1
 # focus-exclude = []
 focus-exclude = [ 
 	"class_g = 'Cairo-clock'",
-	"class_g = 'firefox' && argb"
+	"class_g = 'firefox' && argb",
+	"class_g = 'google-chrome' && argb",
+	"class_g = 'microsoft-edge' && argb"
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
@@ -138,7 +140,8 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
-	"100:class_g = 'Firefox' && argb"
+	"95:class_g = 'google-chrome'",
+	"95:class_g = 'microsoft-edge'"
 	]
 
 
